loop principal arrojado